gcc/testsuite/rust/rustc/ui/keyword/keyword-super-as-identifier.rs
fn main() {
    let super = 22; // { dg-error ".E0433." "" { target *-*-* } }
}

